cmake_minimum_required(VERSION 3.24)
project(Tarea_1_Ejercicios)

set(CMAKE_CXX_STANDARD 17)

add_executable(main main.cpp)
add_executable(EstructurasCondicionales EstructurasCondicionales.cpp)
add_executable(EstructurasIterativas EstructurasIterativas.cpp)
add_executable(EstructurasSeleccion EstructurasSeleccion.cpp)

